--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
   },
   "homepage": "https://github.com/alexanderverbitski/JSCourse#readme",
   "dependencies": {
+    "chai": "^4.2.0",
+    "jest": "^24.7.1",
+    "jest-date-mock": "^1.0.7",
     "mocha": "^6.1.4"
   }
 }
